minor fixes, up to Events

--- a/journal/201810.md
+++ b/journal/201810.md
@@ -4,7 +4,7 @@
 
 Big news of the month is the historical moment: Politeia mainnet launch. Congratulations to everyone and thanks to Politeia team for the countless hours of work.
 
-@jy-p noted that Politeia's great power can be used to improve Decred, but also lead to problems if used unwisely. To inform stakeholders, he shared his experiences as a custodian of the [Decred Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx). The [blog post](https://blog.decred.org/2018/10/15/Politeia-in-Production/) is highly recommended for stakeholders for all the insights and long it contains.
+@jy-p noted that Politeia's great power can be used to improve Decred, but could also lead to problems if used unwisely. To inform stakeholders, he shared his experiences as a custodian of the [Decred Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx). His [blog post](https://blog.decred.org/2018/10/15/Politeia-in-Production/) is highly recommended for stakeholders for all the insights it contains.
 
 New software version 1.3.1 was released to allow everyone to participate in Politeia. It adds Governance page to Decredition for GUI users, and introduces a new `politeiavoter` tool for CLI users. Get the downloads on [GitHub](https://github.com/decred/decred-binaries/releases/tag/v1.3.1) and don't forget to [verify signatures](https://github.com/decred/decred-binaries/blob/v1.3.1/README.md#verifying-binaries).
 
@@ -12,7 +12,7 @@ New software version 1.3.1 was released to allow everyone to participate in Poli
 
 [dcrd](https://github.com/decred/dcrd):
 
-* Another big change towards multipeer downloads entered testing. It [optimizes](https://github.com/decred/dcrd/pull/1500) chain reorganization logic for the typical case and makes reorganizations use less memory.
+* Another big step towards multipeer downloads entered testing. It [optimizes](https://github.com/decred/dcrd/pull/1500) chain reorganization logic for the typical case and makes reorganizations use less memory.
 * Regression network (regnet) was [resurrected](https://github.com/decred/dcrd/pull/1480) and several unit tests were [migrated](https://github.com/decred/dcrd/pull/1481) to it. This allowed to separate concerns and [optimize](https://github.com/decred/dcrd/pull/1482) simnet setup.
 * [This change](https://github.com/decred/dcrd/pull/1476) simplifies setting up dcrd on a separate machine.
 * New [getblockchaininfo](https://github.com/decred/dcrd/pull/1479) RPC provides useful chain-related information that was previously unavailable.
@@ -23,7 +23,7 @@ A lot of mining-related improvements are [in the pipeline](https://matrix.to/#/!
 
 [dcrwallet](https://github.com/decred/dcrwallet): bug fixes.
 
-[Decrediton](https://github.com/decred/decrediton): [Version 1.3.1](https://github.com/decred/decred-binaries/releases/tag/v1.3.1) reveals SPV and Politeia functionality to all users. It also adds first batch of translations that include French, Spanish, German, Japanese and Chinese (simplified). If you are a long standing community member and notice any incorrect translations you can open an issue on github or contact the team on the slack/matrix chat platforms. To ensure high quality translations, some trust with the project is currently required to submit translation issues. At the same time, the procedures to allow input from more users is being formalized.
+[Decrediton](https://github.com/decred/decrediton): [Version 1.3.1](https://github.com/decred/decred-binaries/releases/tag/v1.3.1) reveals SPV and Politeia functionality to all users. It also adds first batch of translations that include French, Spanish, German, Japanese and Chinese (simplified). If you are a long standing community member and notice any incorrect translations you can open an issue on GitHub or contact the team on the slack/matrix chat platforms. To ensure high quality translations, some reputation with the project is currently required to submit translation issues. At the same time, the procedures to allow input from more users are being formalized.
 
 [Politeia](https://github.com/decred/politeia):
 
@@ -50,7 +50,7 @@ Trezor: Decred support was merged into Model T firmware repository. Decrediton i
 
 [Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher): v0.6.2 released, the downloads and release notes are [on GitHub](https://github.com/matheusd/dcr-split-ticket-matcher/releases/tag/v0.6.2). On the master branch OpenBSD support was added among a few internal improvements.
 
-[docs](https://github.com/decred/dcrdocs): updated relevant documentation for the 1.3.1 release, added new [Decrediton troubleshooting](https://docs.decred.org/getting-started/user-guides/decrediton-troubleshooting/) page, [upgrade](https://github.com/decred/dcrdocs/pull/601) of mkdocs and material theme allowed to simplify things.
+[docs](https://github.com/decred/dcrdocs): updated relevant documentation for the 1.3.1 release, added new [Decrediton troubleshooting](https://docs.decred.org/getting-started/user-guides/decrediton-troubleshooting/) page, [upgrade](https://github.com/decred/dcrdocs/pull/601) of mkdocs and material theme will simplify things.
 
 Politeia documentation is nearing completion, SPV documentation is planned next.
 
@@ -76,23 +76,23 @@ Another warm welcome to new people contributing for the first time: [SergeyMikhl
 
 We had a total of 7 proposals in Politeia in October.
 
-1. @Richard-Red put forth a proposal on October 16, 2018 titled ["Decred Open Source Research"](https://proposals.decred.org/proposals/c68bb790ba0843980bb9695de4628995e75e0d1f36c992951db49eca7b3b4bcd) it aims to seek funding for opensource research onto cryptocurrency and will involve multiple contributors. He is currently requesting for 10000 USD as an initial budget for a few months.
+1. @Richard-Red put forth a proposal on October 16, 2018 titled ["Decred Open Source Research"](https://proposals.decred.org/proposals/c68bb790ba0843980bb9695de4628995e75e0d1f36c992951db49eca7b3b4bcd) it aims to seek funding for open source research and will involve multiple contributors. He is currently requesting for 10,000 USD as an initial budget for a few months.
 
    Current Status: Proposal voting active
 
-2. @Richard-Red opened a proposal titled ["Change language: PoS Mining to PoS Voting, Stakepool to Voting Service Provider"](https://proposals.decred.org/proposals/522652954ea7998f3fca95b9c4ca8907820eb785877dcf7fba92307131818c75). The proposal asks that changes be made to some common terminologies in the decred staking process.
+2. @Richard-Red opened a proposal titled ["Change language: PoS Mining to PoS Voting, Stakepool to Voting Service Provider"](https://proposals.decred.org/proposals/522652954ea7998f3fca95b9c4ca8907820eb785877dcf7fba92307131818c75). The proposal asks that changes be made to some common terminology related to Decred's Proof of Stake Voting.
 
    Current Status: Proposal voting active
 
-3. @jy-p submitted a proposal titled ["Decred Contractor Clearance Process"](https://proposals.decred.org/proposals/fa38a3593d9a3f6cb2478a24c25114f5097c572f6dadf24c78bb521ed10992a4). The proposal goes into detail on a method to handle adding new contractors, removal of contractors, contractor disputes and resolution. He suggested that it be based on existing contractors "voting". The voting power is determined by the number of hours they have billed in a given period of time. The estimated project cost is USD 25,000.
+3. @jy-p submitted a proposal titled ["Decred Contractor Clearance Process"](https://proposals.decred.org/proposals/fa38a3593d9a3f6cb2478a24c25114f5097c572f6dadf24c78bb521ed10992a4). The proposal goes into detail on a method to handle adding new contractors, removal of contractors, contractor disputes and resolution. He suggested that it be based on existing contractors vouching for new contractors in their domain making decisions among the people who work in a given domain. Where that fails a dispute can be escalated to a contractor vote, wherein contractors would vote weighted by the number of hours they have billed in a given period of time. A Stakeholder vote would be a last resort to resolve a dispute. The estimated project cost is USD 25,000, for work on a system for tracking contractors within domains and who has vouched for who.
 
    Current Status: Author has not yet authorized the start of voting
 
-4. A user "hashfunction8" had a proposal named ["Testing of the funding-request mechanism by a non expert"](https://proposals.decred.org/proposals/3575a65bbc3616c939acf6edf801e1168485dc864efef910034268f695351b5d) in which the user asked for 0.1 DCR to document and write a report on how to use the politeia system.
+4. A user "hashfunction8" submitted a proposal named ["Testing of the funding-request mechanism by a non expert"](https://proposals.decred.org/proposals/3575a65bbc3616c939acf6edf801e1168485dc864efef910034268f695351b5d) in which the user asked for 0.1 DCR to reimburse their proposal fee, in exchange they would document how to use the proposal submission form.
 
    Current Status: Author has not yet authorized the start of voting
 
-We had two professional PR companies submit proposals for managing the PR of Decred, both proposals had multiple revisions based on community feedback. 
+We had two professional PR companies submit proposals for to provide communications services for Decred, both proposals had multiple revisions based on community feedback. 
 
 5. ["Ditto Communications Proposal for Decred"](https://proposals.decred.org/proposals/27f87171d98b7923a1bd2bee6affed929fa2d2a6e178b5c80a9971a92a5c7f50) by ["Ditto Communications"](https://www.dittopr.co/)
 
@@ -106,11 +106,11 @@ We had two professional PR companies submit proposals for managing the PR of Dec
 
    Current Status: Proposal voting active
 
-7. A cryptocurrency exchange Easyrabbit opened a proposal ["Premium Listing for Decred on Easyrabbit "](https://proposals.decred.org/proposals/34707d34b09c3ebcf0d4aa604e8a08244e8f0f082c0af3f33d85778c93c81434) the proposal asks Decred pay to  become "Premium Listed" in their exchange. This would have benefits like "featured section", "social media promotions", "reduced fees and offers", "widget integration". They asked for a fee of 30 DCR.
+7. A cryptocurrency exchange Easyrabbit opened a proposal ["Premium Listing for Decred on Easyrabbit "](https://proposals.decred.org/proposals/34707d34b09c3ebcf0d4aa604e8a08244e8f0f082c0af3f33d85778c93c81434) the proposal asks for 30 DCR for decred to become "Premium Listed" in their exchange. This would have benefits like "featured section", "social media promotions", "reduced fees and offers", "widget integration".
 
    Current Status: Author has not yet authorized the start of voting
 
-For a more detailed report on the submitted proposals please read the "Politeia Digest" by @Richard-Red 
+For a more detailed report on the submitted proposals and related activity each week, check out @richard-red's Politeia Digest.
 
 * https://www.reddit.com/r/decred/comments/9qnye8/politeia_digest_issue_1_a_short_weekly_update_on/
 * https://www.reddit.com/r/decred/comments/9sruhn/politeia_digest_2_oct_2330th_2018/
@@ -157,12 +157,12 @@ Welcome _three_ new voting service providers, making a total of 20:
 Exchange integrations:
 
 * [gate.io](https://www.gate.io/) [announced](https://twitter.com/gate_io/status/1049238635189391361) the addition of DCR trading against BTC and USDT.
-* [Binance](https://www.binance.com/en) [added](https://twitter.com/binance/status/1054572693725446144) DCR trading against BTC and BNB, [noting](https://twitter.com/cz_binance/status/1054573983805423616) it as "strong community project". Discussed on [r/binance](https://www.reddit.com/r/binance/comments/9qle8z/dcr_on_binance/) and [r/cryptocurrency](https://www.reddit.com/r/CryptoCurrency/comments/9qlac1/binance_just_announced_they_are_listing_decred_26/).
-* [Easyrabbit](https://easyrabbit.net/) [added](https://twitter.com/easyrabbit_net/status/1057289620206088192) Decred support and allows to exchange DCR without an account.
+* [Binance](https://www.binance.com/en) [added](https://twitter.com/binance/status/1054572693725446144) DCR trading against BTC and BNB, [noting](https://twitter.com/cz_binance/status/1054573983805423616) it as a "strong community project". Discussed on [r/binance](https://www.reddit.com/r/binance/comments/9qle8z/dcr_on_binance/) and [r/cryptocurrency](https://www.reddit.com/r/CryptoCurrency/comments/9qlac1/binance_just_announced_they_are_listing_decred_26/).
+* [Easyrabbit](https://easyrabbit.net/) [added](https://twitter.com/easyrabbit_net/status/1057289620206088192) Decred support and allows for the exchange of DCR without an account.
 
 Evercoin turned from an instant exchange into an app and no longer supports Decred, thus [removed](https://github.com/decred/dcrweb/pull/389) from the [list of exchanges](https://decred.org/exchanges/).
 
-Decred [is live](https://twitter.com/roomofsatoshi/status/1052879109099991041) on [Living Room of Satoshi](https://www.livingroomofsatoshi.com/). It allows to pay any bill or to any Australian bank account with Decred. Established in 2014, the service helped to pay over 140,000 bills.
+Decred [is live](https://twitter.com/roomofsatoshi/status/1052879109099991041) on [Living Room of Satoshi](https://www.livingroomofsatoshi.com/). It allows one to pay any bill or to pay money into any Australian bank account with Decred. Established in 2014, the service helped to pay over 140,000 bills.
 
 > Hi guys, just want to let you know that Decred is now live on [livingroomofsatoshi.com](https://www.livingroomofsatoshi.com/) . LRoS is a platform that Australians can use to pay any bill with cryptocurrency. We were getting quite a bit of interest from Decred users so we're happy to now have you onboard for Australians to use. (@RoomOfSatoshi in [#general](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153985979832389MbrMp:decred.org))
 
@@ -170,7 +170,7 @@ Decred [is live](https://twitter.com/roomofsatoshi/status/1052879109099991041) o
 
 New merchant: [Crypto Posters](https://www.cryptocurrencyposters.com/) offers [Decred merch](https://www.cryptocurrencyposters.com/coins/decred-merch/) (including socks!) and accepts DCR. You can talk to them [on reddit](https://www.reddit.com/r/decred/comments/9qrqlh/decred_merchandise_from_a_site_that_actually/).
 
-Brazilian presidential candidate Fernando Haddad [registered](https://www.obrasilfelizdenovo.com/haddad-blockchain-bitcoin-plano-governo/) his government plan on the Decred blockchain to prevent distortion and possible vote manipulation by fake news. Link to document certification is [here](https://originalmy.com/bitregistro/088e82f064705bd7d33fe708c1084b43898d5739fe7a5ff6bff14a9c0a889853). The story got covered by outlets like [criptomoedasfacil](https://www.criptomoedasfacil.com/candidato-a-presidencia-fernando-haddad-registra-seu-plano-de-governo-na-blockchain/), [criptonoticias](https://www.criptonoticias.com/registros-notarias/candidato-presidencial-brasil-registra-plan-gobierno-decred/) and [cointelegraph](https://cointelegraph.com/news/brazilian-presidential-candidate-uses-blockchain-to-publish-government-plan) (_Decred omitted_). Discussion on [r/decred](https://www.reddit.com/r/decred/comments/9ofupt/brazilian_presidential_candidate_uses_decred/).
+Brazilian presidential candidate Fernando Haddad [registered](https://www.obrasilfelizdenovo.com/haddad-blockchain-bitcoin-plano-governo/) his government plan on the Decred blockchain to prevent distortion and possible vote manipulation by fake news. Link to document certification is [here](https://originalmy.com/bitregistro/088e82f064705bd7d33fe708c1084b43898d5739fe7a5ff6bff14a9c0a889853). The story got covered by outlets like [criptomoedasfacil](https://www.criptomoedasfacil.com/candidato-a-presidencia-fernando-haddad-registra-seu-plano-de-governo-na-blockchain/), [criptonoticias](https://www.criptonoticias.com/registros-notarias/candidato-presidencial-brasil-registra-plan-gobierno-decred/) and [cointelegraph](https://cointelegraph.com/news/brazilian-presidential-candidate-uses-blockchain-to-publish-government-plan) (_mention of Decred omitted_). Discussion on [r/decred](https://www.reddit.com/r/decred/comments/9ofupt/brazilian_presidential_candidate_uses_decred/).
 
 ## Marketing
 
@@ -180,7 +180,7 @@ In addition, multiple blog posts were released to support the Politeia launch, i
 
 Decred was a platinum sponsor at the Texas Bitcoin Conference in Austin on Oct 27-28. A large team converged to deliver some dynamic presentations on governance, Politeia specifically, staking, mining, and many other topics. Videos of the presentations can be viewed [here](https://www.youtube.com/playlist?list=PLaMrpvQ0yJ_x4L3vtUwfZOM6euh3P8-fx).
 
-Much of the remainder of the month focused on vetting PR firms and facilitating proposals on Politeia, which will soon be detailed further in a blog by @Dustorf. Now that a PR firm has been approved (early Nov), work will begin to gain consensus within the community on messaging, and plans will begin on significant website updates and an integrated communications for 2019. Much more to share in November.
+Much of the remainder of the month focused on vetting PR firms and facilitating proposals on Politeia, which will soon be detailed further in a blog by @Dustorf. Now that a PR firm has been approved (early Nov), work will begin to gain consensus within the community on messaging, and plans will begin on significant website updates and an integrated communications plan for 2019. Much more to share in November.
 
 Targeted advertising report for {month} was posted by @{}. {short recap}. Read more [here]({link}).
 
@@ -189,7 +189,7 @@ Targeted advertising report for {month} was posted by @{}. {short recap}. Read m
 Attended:
 
 * [Austin Startup Week](http://atxstartupweek.com/) in Austin, USA. @moo31337 attended [panel](https://austinstartupweek2018.sched.com/event/GADX/blockchain-track-three-public-blockchains-not-called-bitcoin-or-ethereum) "Three Public Blockchains Not Called Bitcoin. Or Ethereum.". (photos: [1](https://twitter.com/DeCredBAB/status/1046851603570073603) [2](https://twitter.com/DeCredBAB/status/1046844519004737538) [3](https://twitter.com/nemofficial/status/1046914906233036800))
-* @moo31337 teached a class at [University of Texas](https://twitter.com/UTAustin) in Austin, USA. "He wrote a toy blockchain the night before to show how easy it is!". @jz [argues](https://twitter.com/jz_bz/status/1046927198018506752) we might have missed a 9 figure ICO. ([photo](https://twitter.com/DeCredBAB/status/1046916869024862208))
+* @moo31337 taught a class at [University of Texas](https://twitter.com/UTAustin) in Austin, USA. "He wrote a toy blockchain the night before to show how easy it is!". @jz [argues](https://twitter.com/jz_bz/status/1046927198018506752) we might have missed a 9 figure ICO. ([photo](https://twitter.com/DeCredBAB/status/1046916869024862208))
 * [Decred Meetup](https://www.meetup.com/decredpdx/events/254891749/) in Portland, USA.
 * [Bitcoin Meetup CDMX](https://www.meetup.com/Bitcoin-Meetup-Ciudad-de-Mexico/events/255035235/) in Mexico City, Mexico. @elian hosted the event and noted: "of an audience of 30 people only 4 have heard before of Decred, everyone was so surprised to find such a high-quality project in crypto, also they where very interested in how Politeia will be use to deploy the R&D funds of Decred, about the hybrid consensus mechanism and how governance is structured in Decred, was definitely a great audience, looking forward to another meetup". ([photos](https://twitter.com/Decred_MX/status/1048802991325761536))
 * [SF Blockchain Week](https://sfblockchainweek.io/) in San Francisco, USA. @lukebp was speaking on "Consensus Systems: DPos vs PoS".
@@ -198,6 +198,8 @@ Attended:
 * Decred Summit at [Texas Bitcoin Conference](https://texasbitcoinconference.com/) in Austin, USA. This was a huge Decred event and Decred was a platinum sponsor. A total of 9 presentations were given, most of them recorded. New shiny silver jacket made an appearance. ([Decred videos](https://www.youtube.com/playlist?list=PLaMrpvQ0yJ_x4L3vtUwfZOM6euh3P8-fx), [all videos](https://www.youtube.com/playlist?list=PLlLSsIJ2O_cTIaALNXExlEqu3jP6IQyc_), photos: [1](https://twitter.com/ahcastor/status/1056200576206360576), [2](https://twitter.com/odyssey_crypto/status/1056184765181816832), [3](https://twitter.com/cburniske/status/1056228711542988801))
 
 Upcoming:
+
+* [websummit](https://websummit.com/) in Lisbon, Portugal on Nov 5-8.
 
 * [Blockmaster](https://www.blockmaster.com.br/eventos/forum-blockmaster-2018-sao-paulo/) in Sao Palo, Brazil on Nov 13.
 * [BlockchainFiesta](http://blockchainfiesta.io/) in Krakow, Poland on Nov 16.
@@ -291,7 +293,7 @@ Comm systems news:
 * Thanks to @degeri for detecting https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153984485932336wcyEb:decred.org malware posted in #general. Stay vigilant!
 * New [#proposals](https://riot.im/app/#/room/!MIGqWXfLFBwhipPKYL:decred.org) room was created to discuss Politeia proposals. Part of history is already gone in the Slack Void, but everything is stored in Matrix. For the diggers [here](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154007473834677bxnMv:decred.org) is the room start.
 * Riot update reduced memory usage by 70% https://medium.com/@RiotChat/riot-im-web-0-17-and-ios-0-7-6-smaller-footprint-faster-launch-5ddd18a65abb
-* Registrations on the forum [are closed](https://github.com/decred/dcrweb/issues/379), the forum will stay up archival purposes.
+* Registrations on the forum [are closed](https://github.com/decred/dcrweb/issues/379), the forum will stay up for archival purposes.
 
 {highlights, one paragraph per topic}
 
