--- a/journal/201810.md
+++ b/journal/201810.md
@@ -263,9 +263,7 @@ Videos:
 
 Audio:
 
-* What Grinds My Gears: A Realist's Take on Crypto. Episode 2: Boaty McBoatface ([simplecast.com](https://simplecast.com/s/e236b0fe))
-
-  [@_jillruth](https://twitter.com/_jillruth) and [@Melt_Dem](https://twitter.com/Melt_Dem) discuss Tether panic, Fidelity hype and Decred's DAO
+* What Grinds My Gears: A Realist's Take on Crypto. Episode 2: Boaty McBoatface ([simplecast.com](https://simplecast.com/s/e236b0fe), [@_jillruth](https://twitter.com/_jillruth) and [@Melt_Dem](https://twitter.com/Melt_Dem) discuss Tether panic, Fidelity hype and Decred's DAO)
 * Thriller Podcast - S2EP029: Marco Peereboom of Decred ([simplecast.com](https://simplecast.com/s/3990774a), start time 27:14)
 
 ## Community Discussions
