--- a/journal/201810.md
+++ b/journal/201810.md
@@ -291,7 +291,7 @@ Twitter: how Decred and Dash differ merely in [implementation details](https://t
 
 Reddit: whether Decred will [fork](https://www.reddit.com/r/decred/comments/9kmdn2/will_decred_be_hard_fork_like_sia/) like Sia; [concerns](https://www.reddit.com/r/decred/comments/9kqxlp/few_concerns/) about end of emission and stakeholders making good long term decisions; plans on advanced [multisig](https://www.reddit.com/r/decred/comments/9niddh/does_decred_have_plans_for_supporting_advanced/), Schnorr and MuSig; [privacy](https://www.reddit.com/r/decred/comments/9qgqlm/is_it_possible_to_have_a_private_coin_whos/) vs auditable supply; Wachsman and Ditto proposal [discussion](https://www.reddit.com/r/decred/comments/9rpze2/wachsman_or_ditto_which_proposal_will_you_vote_for/); collecting [questions](https://www.reddit.com/r/decred/comments/9sz2ae/ask_the_infrastructure_guy_community_question/) to people running the infrastructure.
 
-Chats: {interesting convos}
+Chats: [choosing](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153842845217959NFCXu:decred.org) a VSP; creating and signing transactions [offline](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153842975517974wduOy:decred.org); [differences](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$153844796918108yZpuM:decred.org) from Dash; [ideas](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153852369718855paWRH:decred.org) for better dev infrastructure, automated setup of an entire dev environment; Decred vs Dash [approval threshold](https://matrix.to/#/!VFRvyndKpzcLrVslQD:decred.org/$153852668618869mRjKZ:decred.org), minimum quorum, attempts to short circuit open source ethos; proposal [approval threshold](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153859491119463TKGiU:decred.org) and minimum quorum; [translations](https://matrix.to/#/!tfqymymiNgzSUJTHqS:decred.org/$153866711120129gFEWS:decred.org) of documentation; [history](https://matrix.to/#/!wSdymYrEpBhsWlDJuk:decred.org/$153864618819929CQaHw:decred.org) of ticket splitting in decredbrasil VSP; [idea](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153867874820458xeJec:decred.org) to reward Pi voting from the Treasury; [vote delegation](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153868485920740QqCCr:decred.org) and privacy of Pi voting; [marketing strategy](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$153868959820853zYfqe:decred.org) and target audience for Decred, advertising not connecting us with type of users we want, stories from Decred converts; [summary](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153874797221213mSnzr:decred.org) of the debate around Vlad's Blockchain Governance 101, ethical dilemma whethere to protect people from theft, using term 'autonomous'; [whether](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153878342822432RgZay:decred.org) Chinese miners could collude to control Decred, and whether miners in general deserve the animosity they commonly get, a case that ASIC miners know and believe in the networks they mine unlike GPU miners; [terminology](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$153874655321155rYFGA:decred.org): dev subsidy, network fund, treasury; loss of [diversity](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$153892770323027pNBOh:decred.org) in the community as a result of chain fork; [quadratic voting](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153887144022897dgQOf:decred.org), passionate minority forcing rules on the majority; [gaming](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153927425525868IruoT:decred.org) Pi snapshot voting system; [idea](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$153918965425238aUYAa:decred.org) to use BitConnect meme in Decred video; VSP [centralization](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153950034527053SFNXj:decred.org) concerns, 1-click VPS setup for solo voting; solo voting using [Raspberry Pi 3](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153953096327147HmyMx:decred.org), latency and disk speed; handling [translations](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$153948439827046snYzK:decred.org); [liquid democracy](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153954602627296ibvkE:decred.org), importance of direct voting, possible countermeasures to VSPs playing games; [guidelines](https://matrix.to/#/!tfqymymiNgzSUJTHqS:decred.org/$153997649334019oJBgN:decred.org) for creating proposal; ASIC [flexibility](https://matrix.to/#/!NNzHoaSdnsbZDQOXJr:decred.org/$153956941127373jtLMI:decred.org) vs hashrate; optimal hardware for [voting wallets](https://matrix.to/#/!wSdymYrEpBhsWlDJuk:decred.org/$153967954229301OEZco:decred.org); [misbehaving admins](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$153971553330341sUOMq:decred.org) are not such a big problem with transparent censorship; [mandatory email](https://matrix.to/#/!VFRvyndKpzcLrVslQD:decred.org/$153972735630609elzTp:decred.org) for Pi, Matrix integration; [mesh networks](https://matrix.to/#/!NKtIRqGOEGaZvSQkKl:decred.org/$153975642830743UMGBJ:decred.org), goTenna, LN; [separate address](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153986758232487JVCZi:decred.org) for Pi voting, delegation of sovereignty; why Bitcoin Core won't create a [spec](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153989568933092tBMyV:decred.org) for Bitcoin protocol; multi-day chat on [non-javascript](https://matrix.to/#/!LmKzrmxJIXNHNiEmIh:decred.org/$153996808633786coBDQ:decred.org) environments; stakeholders can't make good [decisions](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153997031533828Zglen:decred.org), skin in the game; downsides of using ['autonomous'](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$153994802233331ZeCqV:decred.org) in relation to Decred's model and possible replacement; [funding](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$153999901734257JISpG:decred.org) of core development, contractor independence; [opinions](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$154015850835480YVWfd:decred.org) on rich list, concerns about wealth centralization; [ways](https://matrix.to/#/!VFRvyndKpzcLrVslQD:decred.org/$154009032134975sckCK:decred.org) to rank comments on Pi; [defunding](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154013858535337uwJhD:decred.org) a proposal; fees to prevent [spam](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$154018142235520cuekK:decred.org) on Pi, Monero experience; [liaisons](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154024432236136yXour:decred.org) for proposals vouching for professional services; [paying in USD](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154024869536185GPjrF:decred.org) would set a bad precedent for the Treasury and lead to centralization; [more press](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$1540324474112496lXVEe:matrix.org) from Binance listing than from Politeia release, short-term vision; bridging [challenges](https://matrix.to/#/!VFRvyndKpzcLrVslQD:decred.org/$154032931237477PyMSA:decred.org), Matrix as a hub; [voter fatigue](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154040105938567GwEyd:decred.org); [people committed](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154040815238805YjNtU:decred.org) for the proposal, watching for staff changes; [ethics](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154041774339075mDBxq:decred.org) of attacking smaller PoW coins, Decred was nearly impossible to 51% attack from the start; [how](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$154043923339333cZxhY:decred.org) to protect from sending to wrong address, how the recipient can ack the transfer; [why](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$1540504703107RhgLT:decred.org) wasn't a PR company hired in the past; sidechains vs LN as a [way to scale](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$1540581140920mIeCx:decred.org), more opportunities when base layer can change; [organic growth](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$15406049691451KndKt:decred.org) of Bitcoin and VC money; using Git to massively replicate [impactful writings](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$15409403034615pjxpB:decred.org); whether DCR locked in tickets is a [security advantage](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$15409448374658jRaoW:decred.org) in case of theft; Politeia launch issues, becoming an admin, what if admins delay the vote to buy tickets + solutions, not adding rules prematurely.
 
 > I've visited a lot of other communities and IMO the Decred community seems quite strong. I haven't found many where you have such access to the developers and where you can watch the changes being made on a daily basis. (@sumiflow in [#trading](https://matrix.to/#/!zxBsqZRxjbQoLqJRwe:decred.org/$153979318831397xufQV:decred.org))
 
