--- a/journal/201810.md
+++ b/journal/201810.md
@@ -258,10 +258,10 @@ Videos:
 
 * All the videos from Texas Bitcoin Conference in [this playlist](https://www.youtube.com/playlist?list=PLaMrpvQ0yJ_x4L3vtUwfZOM6euh3P8-fx)
 * What is Decred? (Japanese, [youtube](https://www.youtube.com/watch?v=-RVf3Hkv-9Q))
-* Decred Weekly 15-21 (Politeia, Elections, Payments, Texas) ([youtube](https://www.youtube.com/watch?v=ga_uCBUXY-I))
+* Decred Weekly 15-21 (Politeia, Elections, Payments, Texas) by @michae2xl (Portuguese, [youtube](https://www.youtube.com/watch?v=ga_uCBUXY-I))
 * Decred Review - The Biggest Bitcoin Competitor? ([youtube](https://www.youtube.com/watch?v=7oONdnwFFJI), u/davecgh [commented](https://www.reddit.com/r/decred/comments/9qyemq/decred_review_the_biggest_bitcoin_competitor/e8cnw9g/) to clarify on hard fork resistance)
 * decred explained - what is decred ([youtube](https://www.youtube.com/watch?v=JKKiGxJfcQY))
-* Decred Weekly 22-28 (Binance, Texas, Edge Wallet, Trezor T, Proposals) ([youtube](https://www.youtube.com/watch?v=dvHUzg-yj_c))
+* Decred Weekly 22-28 (Binance, Texas, Edge Wallet, Trezor T, Proposals) by @michae2xl (Portuguese, [youtube](https://www.youtube.com/watch?v=dvHUzg-yj_c))
 
 Audio:
 
