--- a/journal/201810.md
+++ b/journal/201810.md
@@ -25,21 +25,15 @@ A lot of mining-related improvements are [in the pipeline](https://matrix.to/#/!
 
 [Decrediton](https://github.com/decred/decrediton): [Version 1.3.1](https://github.com/decred/decred-binaries/releases/tag/v1.3.1) reveals SPV and Politeia functionality to all users. It also adds first batch of translations that include French, Spanish, German, Japanese and Chinese (simplified). If you are a long standing community member and notice any incorrect translations you can open an issue on GitHub or contact the team on the slack/matrix chat platforms. To ensure high quality translations, some reputation with the project is currently required to submit translation issues. At the same time, the procedures to allow input from more users are being formalized.
 
-[Politeia](https://github.com/decred/politeia):
-
-* Multiple bug fixes and UI improvements.
-* [Ability](https://github.com/decred/politeia/issues/538) for admins to specify quorum, pass threshold and vote duration.
-* [Ability](https://github.com/decred/politeia/issues/537) to lock accounts that are abusing the system or for security reasons.
-* [Ability](https://github.com/decred/politeiagui/pull/655) to revoke proposal vote authorization.
-* Many community members joined testing and submitted dozens of issue reports after launch.
+[Politeia](https://github.com/decred/politeia): [ability](https://github.com/decred/politeia/issues/538) for admins to specify voting parameters (quorum, pass threshold and vote duration), [ability](https://github.com/decred/politeia/issues/537) to lock accounts that are abusing the system or for security reasons, [ability](https://github.com/decred/politeiagui/pull/655) to revoke proposal vote authorization. Multiple bug fixes and UI improvements. Many community members joined testing and submitted dozens of issue reports after launch.
 
 Up next is adding notifications and other missing features. Longer term plan is to scale Politeia and develop smart contracts for the Treasury.
 
 [Android](https://github.com/decred/dcrandroid): dcrandroid gained a PIN security option in addition to the existing password option for spending security. Another security feature is full wallet encryption and requiring the PIN/password to access the wallet. Android 9 support was added. The testnet version is now available to beta testers [on Google Play](https://play.google.com/store/apps/details?id=com.decred.dcrandroid.testnet), and they will automatically receive updates. A new testnet version is being pushed now. Several bugs and priority enhancements were done based on feedback from the last testing round. Testing for the mainnet release is being done.
 
-[iOS](https://github.com/raedahgroup/dcrios): all crashing issues were resolved, and effort will be focused on getting it out to a larger testing audience and targeting a release after the Android release is out the door.
+[iOS](https://github.com/raedahgroup/dcrios): all crashing issues are resolved, and effort will be focused on getting it out to a larger testing audience and targeting a release after the Android release is out the door.
 
-[dcrdata](https://github.com/decred/dcrdata): work to speed up initial sync ([751](https://github.com/decred/dcrdata/pull/751), [754](https://github.com/decred/dcrdata/pull/754), [752](https://github.com/decred/dcrdata/issues/752)), [disapproved blocks](https://github.com/decred/dcrdata/pull/733) page, Insight API [documentation](https://github.com/decred/dcrdata/pull/719) by @s_ben, new visual blocks [home page](https://github.com/decred/dcrdata/pull/718) by @itswisdomagain, time grouped [block listing](https://github.com/decred/dcrdata/pull/779).
+[dcrdata](https://github.com/decred/dcrdata): work to speed up initial sync ([751](https://github.com/decred/dcrdata/pull/751), [754](https://github.com/decred/dcrdata/pull/754), [752](https://github.com/decred/dcrdata/issues/752)), [disapproved blocks](https://github.com/decred/dcrdata/pull/733) page, Insight API [documentation](https://github.com/decred/dcrdata/pull/719) by @s_ben, new visual blocks [home page](https://github.com/decred/dcrdata/pull/718) by @itswisdomagain, time grouped [block listing](https://github.com/decred/dcrdata/pull/779). The newly merged features will be deployed in future releases.
 
 Trezor: Decred support was [merged](https://github.com/trezor/trezor-core/pull/358) into Model T firmware repository. Decrediton integration can be merged after the next firmware release. This is all for normal transactions. Buying tickets requires more work and changes to dcrwallet.
 
@@ -49,9 +43,9 @@ Trezor: Decred support was [merged](https://github.com/trezor/trezor-core/pull/3
 
 Politeia documentation is nearing completion, SPV documentation is planned next.
 
-[decred.org](https://github.com/decred/dcrweb): [removed](https://github.com/decred/dcrweb/issues/370) outdated compare page that caused some controversy, code cleanup, updated press and exchanges. 5 contractors added and 1 removed.
-
 [Design](https://github.com/decred/dcrdesign/releases): EETER updated Decred logo for better performance on digital screens. Check this [blog post](https://medium.com/decred/dcr-logo-performance-update-f12f94a7a33e) with details and comparison to old logo.
+
+[decred.org](https://github.com/decred/dcrweb): [removed](https://github.com/decred/dcrweb/issues/370) outdated compare page that caused some controversy, code cleanup, updated press and exchanges. 5 contractors added and 1 removed.
 
 Did you know there are several [Decred packages](https://aur.archlinux.org/packages/?O=0&K=decred) in Arch User Repository?
 
@@ -63,9 +57,9 @@ Dev activity stats for October: 310 active PRs, 297 master commits, 65K added an
 
 Welcome the new contractor company: [Block 42](http://42block.io/). They have been contributing to development and design for some time, and now finally appeared [at decred.org](https://decred.org/contributors/).
 
-Another warm welcome to new people contributing for the first time: [SergeyMikhlevskiy](https://github.com/decred/dcrandroid/commits?author=SergeyMikhlevskiy), [ademuanthony](https://github.com/decred/dcrdata/commits?author=ademuanthony), [ggoranov](https://github.com/decred/dcrd/commits?author=ggoranov), [gallexis](https://github.com/decred/dcrwallet/commits?author=gallexis), [ZeroASIC](https://github.com/decred/dcrweb/commits?author=ZeroASIC), [buck54321](https://github.com/decred/dcrdata/commits?author=buck54321), [szpasztor](https://github.com/decred/decrediton/commits?author=szpasztor), [faelv](https://github.com/decred/decrediton/commits?author=faelv).
+Another warm welcome to new people contributing for the first time: [SergeyMikhlevskiy](https://github.com/decred/dcrandroid/commits?author=SergeyMikhlevskiy) (dcrandroid), [ademuanthony](https://github.com/decred/dcrdata/commits?author=ademuanthony) and [buck54321](https://github.com/decred/dcrdata/commits?author=buck54321) (dcrdata), [ggoranov](https://github.com/decred/dcrd/commits?author=ggoranov) (dcrd), [gallexis](https://github.com/decred/dcrwallet/commits?author=gallexis) (dcrwallet), [ZeroASIC](https://github.com/decred/dcrweb/commits?author=ZeroASIC) (dcrweb), [szpasztor](https://github.com/decred/decrediton/commits?author=szpasztor) and [faelv](https://github.com/decred/decrediton/commits?author=faelv) (decrediton).
 
-(_ed: the list above may be incomplete, looking for help to automate the collection of info from multiple repositories_)
+(_the list above may be incomplete, looking for help to automate the collection of info from repositories_)
 
 ## Governance
 
