Dev and People fix 2

--- a/journal/201810.md
+++ b/journal/201810.md
@@ -59,7 +59,7 @@ Welcome the new contractor company: [Block 42](http://42block.io/). They have be
 
 Another warm welcome to new people contributing for the first time: [SergeyMikhlevskiy](https://github.com/decred/dcrandroid/commits?author=SergeyMikhlevskiy) (dcrandroid), [ademuanthony](https://github.com/decred/dcrdata/commits?author=ademuanthony) and [buck54321](https://github.com/decred/dcrdata/commits?author=buck54321) (dcrdata), [ggoranov](https://github.com/decred/dcrd/commits?author=ggoranov) (dcrd), [gallexis](https://github.com/decred/dcrwallet/commits?author=gallexis) (dcrwallet), [ZeroASIC](https://github.com/decred/dcrweb/commits?author=ZeroASIC) (dcrweb), [szpasztor](https://github.com/decred/decrediton/commits?author=szpasztor) and [faelv](https://github.com/decred/decrediton/commits?author=faelv) (decrediton).
 
-(_ed: the list above may be incomplete, looking for help to automate the collection of info from multiple repositories_)
+(_the list above may be incomplete, looking for help to automate the collection of info from repositories_)
 
 ## Governance
 
