Updated with Linkedin community stats

--- a/journal/201810.md
+++ b/journal/201810.md
@@ -267,6 +267,8 @@ Community stats:
 * Slack users 6,271 (+122)
 * YouTube subscribers 3,726 (+8)
 * Facebook 3,085 (+25) followers and 2,849 (+23) likes
+* Linkedin Decred 412 (+37) followers, 593 page views (+90%),276 unique visitors (+51%)   
+* Linkedin Decred Politeia (new showcase page) 13 followers, 78 page views, 16 unique visitors 
 * GitHub 430 (+11) stars and 1,118 (+45) forks of dcrd repository
 
 Comm systems news:
